@@ -1,3 +1,7 @@
+2007-06-29  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* SelectorTest.cs: Added.
+
 2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* TabPanelTest.cs: Moved some theme-specific tests.
